# Math_CPP

./: CMakeLists.txt  README.md
include/: crammer.h  matrix.h  probSolver.h  text.h
src/: crammer.cpp  main.cpp  matrix.cpp  probSolver.cpp  text.cpp
